2024-06-21T00:35:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9606330166 # 333
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-21
* notice: last 14d: unq all: 2 6
* notice: prev accum: outdated-unq outdated-all / unq all: 680 1151 / 685 1156
* notice: next accum: outdated-unq outdated-all / unq all: 680 1151 / 686 1157
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-06-20]

2024-06-20T00:35:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9589740119 # 332
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-20
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 679 1150 / 684 1155
* notice: next accum: outdated-unq outdated-all / unq all: 680 1151 / 685 1156
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-05] / [2024-06-19]

2024-06-19T00:36:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9574169187 # 331
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-19
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 678 1149 / 683 1154
* notice: next accum: outdated-unq outdated-all / unq all: 679 1150 / 684 1155
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-04] / [2024-06-18]

2024-06-18T00:36:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9556899389 # 330