@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-06-21T00:35:11Z",
+  "timestamp" : "2024-06-24T00:37:27Z",
   "count_outdated" : 1151,
   "uniques_outdated" : 680,
-  "count" : 1157,
-  "uniques" : 686,
+  "count" : 1158,
+  "uniques" : 687,
   "clones" : [
     {
       "timestamp": "2024-06-14T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2024-06-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
