@@ -1,3 +1,12 @@
+2024-06-24T00:37:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9637656457 # 336
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-24
+* notice: last 14d: unq all: 2 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 680 1151 / 686 1157
+* notice: next accum: outdated-unq outdated-all / unq all: 680 1151 / 687 1158
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-06-23]
+
 2024-06-21T00:35:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9606330166 # 333
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-21
